# smart_calc

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: model.cc  model.h
src/tests/: tests.cc
src/view/: graph.cc  graph.h  graph.ui  mainwindow.cc  mainwindow.h  mainwindow.ui
